--- a/index.css
+++ b/index.css
@@ -10,3 +10,26 @@
   height: 95px;
 }
 
+.fas {
+  font-size: 2.5rem;
+  color: rgba(255, 255, 255, 0.7)
+}
+
+@media screen and (max-width: 991px) {
+  .middle-logo img {
+    /* object-position: -15px 0;
+    width: 152px;
+    height: 37px;
+    margin: 0; */
+
+    object-position: 0 0;
+    height: 37px;
+  }
+
+  .logo-cont {
+    justify-content: space-between;
+    align-items: center;
+    height: 57px;
+    padding: 0 2px !important;
+  }
+}
