--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
 
 .fas {
   font-size: 2.5rem;
-  color: rgba(255, 255, 255, 0.7)
+  color: rgba(255, 255, 255, 0.7);
 }
 
 @media screen and (max-width: 991px) {
@@ -32,4 +32,47 @@
     height: 57px;
     padding: 0 2px !important;
   }
+}
+
+.text-bottom {
+  position: absolute;
+}
+
+.featured-stories h5 > a:hover {
+  color: black;
+  border-bottom: 1px solid red;
+  padding-bottom: 1px;
+}
+
+.text-cont {
+  color: black;
+  line-height: 1.3;
+}
+
+.image-wrapper {
+  position: relative;
+}
+
+.fa {
+  font-size: 21px;
+}
+
+.text-bottom {
+  position: absolute;
+  color: red;
+  background-color: royalblue;
+  bottom: 0;
+}
+
+.op-cont p > a {
+  color: black;
+  line-height: 1;
+}
+
+.op-cont p > a:hover {
+  color: #f72210;
+}
+
+.op-cont {
+  line-height: 0.5;
 }
