--- a/index.css
+++ b/index.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Rokkitt:700&display=swap');
 
+.container-fluid {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.container-fluid .container {
+  max-width: 1310px;
+}
+
 .middle-logo img {
   object-position: 0 0;
   height: 70px;
@@ -34,10 +43,6 @@
   }
 }
 
-.text-bottom {
-  position: absolute;
-}
-
 .featured-stories h5 > a:hover {
   color: black;
   border-bottom: 1px solid red;
@@ -59,10 +64,12 @@
 
 .text-bottom {
   position: absolute;
-  color: red;
-  background-color: whitesmoke;
-  opacity: 0.5;
   bottom: 0;
+  font-style:"Roboto Condensed", sans-serif;
+  color: #f72210;
+  padding: 8px 15px 9px;
+  background-color: rgba(255, 255, 255, 0.9);
+  z-index: 1;
 }
 
 .op-cont p > a {
@@ -81,4 +88,26 @@
 .pan-image {
   width: 151px;
   height: 151px;
+}
+
+.pan-text {
+  position: absolute;
+  background-color: #c2d4d7;;
+  bottom: 0;
+  font-size: 10px;
+}
+
+.pan-text a{
+  color:#272727;
+}
+
+.pan-text a:hover {
+  background-color: #272727;
+  color: #c2d4d7;
+}
+
+.opinion-img{
+  /* object-fit: cover; */
+  width: 79px;
+  height: 63px;
 }
