--- a/index.css
+++ b/index.css
@@ -43,6 +43,21 @@
   }
 }
 
+.pan-text a {
+  color: #272727;
+  font: 300 13px/20px "Helvetica Neue", "Helvetica", Arial, sans-serif;
+}
+
+.op-cont p > a {
+  color: black;
+  line-height: 1;
+}
+
+.pan-text a:hover {
+  background-color: #272727;
+  color: #c2d4d7;
+}
+
 .featured-stories h5 > a:hover {
   color: black;
   border-bottom: 1px solid red;
@@ -65,16 +80,11 @@
 .text-bottom {
   position: absolute;
   bottom: 0;
-  font-style:"Roboto Condensed", sans-serif;
+  font-style: "Roboto Condensed", sans-serif;
   color: #f72210;
   padding: 8px 15px 9px;
   background-color: rgba(255, 255, 255, 0.9);
   z-index: 1;
-}
-
-.op-cont p > a {
-  color: black;
-  line-height: 1;
 }
 
 .op-cont p > a:hover {
@@ -92,22 +102,30 @@
 
 .pan-text {
   position: absolute;
-  background-color: #c2d4d7;;
+  background-color: #c2d4d7;
   bottom: 0;
   font-size: 10px;
 }
 
-.pan-text a{
-  color:#272727;
-}
-
-.pan-text a:hover {
-  background-color: #272727;
-  color: #c2d4d7;
-}
-
-.opinion-img{
+.opinion-img {
   /* object-fit: cover; */
-  width: 79px;
+  width: 63px;
   height: 63px;
+}
+
+.pan-hero-text {
+  font: 15px/20px "Helvetica Neue", "Helvetica", Arial, sans-serif;
+  color: rgba(39, 39, 39, 0.5);
+  margin-bottom: 10px;
+}
+
+.more-img {
+  object-fit: cover;
+  width: 95px;
+  height: 95px;
+}
+
+.more-img1 {
+  width: 95px;
+  height: 95px;
 }
