--- a/index.css
+++ b/index.css
@@ -6,13 +6,13 @@ body {
   font-size: 15px;
 }
 
+.container-fluid .container {
+  max-width: 1310px;
+}
+
 .container-fluid {
   padding-left: 30px;
   padding-right: 30px;
-}
-
-.container-fluid .container {
-  max-width: 1310px;
 }
 
 .middle-logo img {
@@ -159,4 +159,21 @@ body {
   font-weight: bold;
   font-style: "Roboto Condensed", sans-serif;
   text-transform: uppercase;
+}
+
+.sponsored-text {
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: rgba(255, 255, 255, 0.9);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  color: #3581f4;
+}
+
+.sponsor a:hover {
+  color: black;
+  border-bottom: 1px solid red;
+  padding-bottom: 1px;
 }
