--- a/index.css
+++ b/index.css
@@ -260,12 +260,14 @@ a {
 
 .new-cont {
   display: flex;
+  align-items: center;
 }
 
 .image-wrap1 {
   background-image: url("https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5");
   background-repeat: no-repeat;
-  background-position: center;
+  width: 190px;
+  height: 301px;
 
 }
 
