--- a/index.css
+++ b/index.css
@@ -268,10 +268,16 @@ a {
   background-repeat: no-repeat;
   width: 190px;
   height: 301px;
-
 }
 
 .text-sec {
   flex: 1;
 }
 
+.button-color {
+  background-color: #f72210;
+}
+
+.newsweek-name {
+  color: #f72210;
+}
