--- a/index.css
+++ b/index.css
@@ -36,11 +36,6 @@ a {
 
 @media screen and (max-width: 991px) {
   .middle-logo img {
-    /* object-position: -15px 0;
-    width: 152px;
-    height: 37px;
-    margin: 0; */
-
     object-position: 0 0;
     height: 37px;
   }
@@ -50,6 +45,14 @@ a {
     align-items: center;
     height: 57px;
     padding: 0 2px !important;
+  }
+}
+
+@media screen and (min-width: 576px) { 
+  .mag-img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
   }
 }
 
@@ -267,7 +270,9 @@ a {
   background-image: url("https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5");
   background-repeat: no-repeat;
   width: 190px;
-  height: 301px;
+  height: 321px;
+  background-size: cover;
+  background-position: center center;
 }
 
 .text-sec {
@@ -278,6 +283,28 @@ a {
   background-color: #f72210;
 }
 
-.newsweek-name {
-  color: #f72210;
+.newsweek-bootom-logo {
+  width: 236px;
+  fill: #f72210;
+}
+
+.foot-all a {
+  text-decoration: none;
+  color: #6c757d;
+}
+
+.foot-all a:hover {
+  color: rgb(14, 11, 11);
+}
+
+.maga-title h5 > a:hover {
+  color: black;
+  border-bottom: 1px solid red;
+  padding-bottom: 1px;
+}
+
+.in-below h5 > a:hover {
+  color: black;
+  border-bottom: 1px solid red;
+  padding-bottom: 1px;
 }
